--- a/style/style.css
+++ b/style/style.css
@@ -72,7 +72,7 @@ input[type="text"] {
 	border-top-color: #d9d9d9;
 	display: block;
 	margin-bottom: 10px;
-	min-width: 485px;
+	min-width: 550px;
 	height: 27px;
 	top: 29px;
 	left: 1px;
@@ -107,6 +107,7 @@ footer {
 	display: block;
 	width: 100%;
 	height: 35px;
+	left: 0px;
 }
 
 footer li {
